--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "framer-motion": "^12.18.1",
+    "html2canvas": "^1.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
